fixed user menu z-index and selector width

--- a/components/AppLayout/components/NavBar/NavBar.module.scss
+++ b/components/AppLayout/components/NavBar/NavBar.module.scss
@@ -14,6 +14,8 @@
   margin-top: 0px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  z-index: 200;
 
   @include devices.device(smScreen) {
     padding-right: 10%;
